discussion/kv_engine/139739/139739_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Switch magma memory accounting to use memory guards

Change-Id: Ia22d206bc461ec45aab08335a85bdaf208358e71

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-11-06 17:26:25.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-06 18:06:05.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5495/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32: error: no member named "MemoryCtx" in "magma::Magma::Config" [clang-diagnostic-error]
        configuration.magmaCfg.MemoryCtx = &currEngine->getArenaMallocClient();
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5495/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: no member named "MemoryCtx" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5495/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27291/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: no member named "MemoryCtx" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27291/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31606/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(480): error C2039: "MemoryCtx": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31606/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14795/ : FAILURE

Compile error at [2020-11-06T17:53:05.365Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: no member named "MemoryCtx" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14795/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5945/ : FAILURE

Compile error at [2020-11-06T17:47:53.339Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: no member named "MemoryCtx" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5945/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7175/ : FAILURE

Compile error at [2020-11-06T17:50:05.255Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: no member named "MemoryCtx" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7175/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6987/ : FAILURE

Compile error at [2020-11-06T17:48:15.027Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: ?struct magma::Magma::Config? has no member named ?MemoryCtx?; did you mean ?MemoryQuota??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6987/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4027/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6874/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
